# padel-radar

./: .env  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  todo.txt
app/: main.py
collections/: clubs.json
functions/: crud.py  database.py  schemas.py  scraper_cf.py  scraper_oasis.py  scraper_tcd.py  utilities.py
